feat: show selected run request history
